--- a/assets/rmenu/rmenu.css
+++ b/assets/rmenu/rmenu.css
@@ -1,8 +1,10 @@
 .rmenu
 {
-    background-color: #14151a;
+    background-color: rgba(0, 0, 0, .33);
     box-shadow: 0 10px 30px 0 rgb(138 155 165 / 15%);
 }
+
+.rmenu .navbar { box-shadow: none; }
 
 .navbar-brand img { height: 52px; width: auto; }
 
